discussion/kv_engine/177125/177125_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Make DcpFlowControlManager::engine const

Change-Id: I08a3ccdf0b7b5f6d0190ef40029c98ea47642013

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-07 15:47:49.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-07 17:25:40.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18849/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:54:29: error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::newConsumer(gsl::not_null<DcpConsumer*> consumer) {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:62:29: error: out-of-line definition of "handleDisconnect" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::handleDisconnect(
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22: error: expected parameter declarator [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:50: error: expected ")" [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:21: note: to match this "("
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:27: error: expected parameter declarator [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:27: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:55: error: expected ")" [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:26: note: to match this "("
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18849/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:54:29:
error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18849/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40034/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22:
error: use of undeclared identifier "gsl"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40034/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19990/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [76/160]: disk>RAM delete paged-out...../kv_engine/engines/ep/tests/ep_testsuite.cc:4367 Test failed: `" (Expected `0", got `1" - Unexpected bg_fetched after del/get)
[2022-07-07T16:40:08.130Z] (202 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19990/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8629/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.ValueScan/McbpSsl_XattrYes_JsonYes_SnappyNo":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.ValueScan/McbpSsl_XattrYes_JsonYes_SnappyNo
[2022-07-07T16:16:29.878Z] unknown file: Failure
[2022-07-07T16:16:29.878Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response for HELLO" thrown in SetUp().
[2022-07-07T16:16:29.878Z] [  FAILED  ] TransportProtocols/RangeScanTest.ValueScan/McbpSsl_XattrYes_JsonYes_SnappyNo, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <01-00 00-00>) (2009 ms)
TransportProtocols/RangeScanTest.ValueScan/McbpSsl_XattrYes_JsonYes_SnappyNo
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8629/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21793/ : FAILURE

Timeout of a CTest test [2022-07-07T17:25:34.009Z] 425/425 Test #423: serverless_test .........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21793/ )

ThreadSanitizer issue: data race /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/cookie.cc:207 in Cookie::getRequest() const  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21793/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18006/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47660/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29145/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8532/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21104/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20747/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
